--- a/src/sass/_theme_variables.sass
+++ b/src/sass/_theme_variables.sass
@@ -1,6 +1,11 @@
 // In here are varibles used for sphinx_rtd_theme, they either add to or overwrite the default ones
 // that are set in wyrm_core/wy_variables.sass. You'll find wyrm in bower_components if you're looking
 // for a reference.
+$white:                               #ffffff
+$text-color:                          #000000
+$text-light:                          #868686
+$nav-desktop-width:                   320px
+$section-background-color:            $white
 
 $fa-font-path:                        "~font-awesome/fonts"
 $static-img:                          "../img/"
@@ -27,7 +32,9 @@ $guilabel-color:                      $blue
 $footer-color:                        $text-medium
 
 // Menu colors
+$menu-background-color:              $white
 $menu-vertical-background-color:      $section-background-color
+$menu-top-link-color: red
 
 // Menu text colors
 $menu-color:                          $gray
@@ -37,21 +44,21 @@ $menu-light:                          lighten($menu-color,45%) !default
 $menu-lighter:                        lighten($menu-color,60%) !default
 
 // Menu link colors
-$menu-link-color:                     $text-color
-$menu-link-dark:                      $text-dark
-$menu-link-medium:                    $text-medium
-$menu-link-light:                     $text-lighter
-$menu-link-active:                    $white
+$menu-link-color:                     $text-light
+$menu-link-dark:                      $text-color
+$menu-link-medium:                    $text-light
+$menu-link-light:                     $text-light
+$menu-link-active:                    $black
 
 // Navigation colors
 $nav-background-color:                $menu-background-color
-$nav-search-background-color:         $blue
+$nav-search-background-color:         $white
 $nav-search-color:                    $section-background-color
 $nav-link-color:                      $blue
 $nav-link-color-visited:              $purple
 $nav-link-color-hover:                lighten($nav-link-color, 6%) !default
 $nav-link-color-alt:                  hsl(33, 100%, 51%)
-$nav-caption:                         lighten($blue, 15%)
+$nav-caption:                         $text-color
 
 // Sidebar colors
 $sidebar-background-color:            $table-stripe-color
@@ -61,8 +68,8 @@ $sidebar-title-background-color:      $table-border-color
 // Sphinx highlight color
 $highlight-color:                     $yellow
 
-$base-font-family:                    "Lato", "proxima-nova", "Helvetica Neue", Arial, sans-serif
-$custom-font-family:                  "Roboto Slab", "ff-tisa-web-pro", "Georgia", Arial, sans-serif
+$base-font-family:                    "Inter", "Lato", "proxima-nova", "Helvetica Neue", Arial, sans-serif
+$custom-font-family:                  "Inter", "Roboto Slab", "ff-tisa-web-pro", "Georgia", Arial, sans-serif
 $custom-font-family2:                 Georgia, serif
 $code-font-family:                    SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", Courier, monospace
 
