--- a/src/sass/_theme_font_local.sass
+++ b/src/sass/_theme_font_local.sass
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap')
+
 $lato-font-path: "~lato-font/fonts"
 $roboto-font-path: "~roboto-fontface/fonts/roboto-slab"
 
