--- a/src/sass/_theme_layout.sass
+++ b/src/sass/_theme_layout.sass
@@ -218,7 +218,7 @@ html
   background-color: $nav-search-background-color
   text-align: center
   color: $nav-search-color
-  
+
   &.bottom
     width: 95%
     padding: 6px
@@ -302,8 +302,8 @@ html
 .wy-grid-for-nav
   position: absolute
   width: 100%
-  top: 71px;
-  bottom: 0;
+  top: 71px
+  bottom: 0
 
 .wy-nav-side
   position: fixed
@@ -413,7 +413,7 @@ footer
 .genindextable li > ul
   margin-left: $base-line-height
 
-+media($tablet)
+  +media($tablet)
   .wy-body-for-nav
     background: $section-background-color
   .wy-nav-top
@@ -473,7 +473,7 @@ footer
   .wy-header-left
     display: flex
     align-items: center
-  
+
   .wy-github-stars
     line-height: 0
     margin: 0 $gutter * 1.5
@@ -497,15 +497,15 @@ footer
 
   ul
     display: flex
-  
-  li + li 
+
+  li + li
     margin-left: 30px
 
   a
     color: $text-color
     font-weight: 600
 
-+media($tablet)
+    +media($tablet)
   .wy-header
     position: relative
     flex-direction: column
@@ -525,12 +525,12 @@ footer
       display: none
       padding: $gutter
       border-bottom: 1px solid #E9E9E9
-      position: absolute;
-      top: 70px;
-      z-index: 100;
-      background: #fff;
-      width: 100%;
-      left: 0;
+      position: absolute
+      top: 70px
+      z-index: 100
+      background: #fff
+      width: 100%
+      left: 0
 
     .wy-main-nav-toggle
       display: block
@@ -542,7 +542,7 @@ footer
       color: #919191
       height: 70px
       line-height: 70px
-      padding: 0 26px 
+      padding: 0 26px
 
       &::before
         content: " "
@@ -567,10 +567,16 @@ footer
     .wy-main-nav-checkbox:checked + label + .wy-main-nav-menu
       display: block
 
-    li + li 
+    li + li
       margin-left: 0
-      
+
     a
       display: block
       text-align: center
       padding: $gutter 0
+
+    .wy-main-nav-menu
+      a
+        display: inline-block
+        color: white
+        padding: 7px 15px
