--- a/src/sass/_theme_layout.sass
+++ b/src/sass/_theme_layout.sass
@@ -575,8 +575,6 @@ footer
       text-align: center
       padding: $gutter 0
 
-    .wy-main-nav-menu
-      a
-        display: inline-block
-        color: white
-        padding: 7px 15px
+.wy-main-nav a
+  display: inline-block
+  padding: 7px 15px
