--- a/src/sass/_theme_layout.sass
+++ b/src/sass/_theme_layout.sass
@@ -470,6 +470,7 @@ footer
     display: flex
     align-items: center
     height: 70px
+    min-width: 119px
 
     img
       display: block
@@ -492,8 +493,15 @@ footer
   a
     color: $text-color
     font-weight: 600
+    display: inline-block
+    padding: 7px 15px
 
-+media($tablet)
+
+@media screen and (max-width: 920px)
+  .wy-main-nav li + li
+    margin-left: 0
+
+@media screen and (max-width: 790px)
   .wy-header
     position: relative
     flex-direction: column
@@ -563,6 +571,3 @@ footer
       text-align: center
       padding: $gutter 0
 
-.wy-main-nav a
-  display: inline-block
-  padding: 7px 15px
