--- a/src/sass/_theme_layout.sass
+++ b/src/sass/_theme_layout.sass
@@ -478,7 +478,7 @@ footer
 
   .wy-github-stars
     position: relative
-    margin-left: 20px
+    // margin-left: 20px
     +media($mobile)
 
   .wy-header-logo-wrapper
@@ -501,8 +501,8 @@ footer
     align-items: center
 
   a
-    color: #9A9A9A
-    font-size: 0.875rem
+    color: #000
+    font-size: 16px
     font-weight: 600
     display: inline-block
     padding: 0
@@ -510,10 +510,10 @@ footer
 
     &.callToAction
       padding: 7px 15px
-      background: #2980B9
-      border-radius: 3px
+      background: #0a53a5
+      border-radius: 2px
       font-weight: 600
-      font-size: 14px
+      font-size: 16px
       color: #fff
       border: 0
       cursor: pointer
